force-app/main/default/objects/Pipeline__c/fields/Release_COE_Wire__c.field-meta.xml
<CustomField>
    <fullName>Release_COE_Wire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release COE Wire</label>
    <type>Checkbox</type>
</CustomField>