force-app/main/default/objects/Pipeline__c/fields/Release_COE_Wire_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_COE_Wire_Notes__c</fullName>
    <label>Release COE Wire Notes</label>
    <type>TextArea</type>
</CustomField>