force-app/main/default/objects/Pipeline__c/fields/Rent_Charged_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Charged_Amount__c</fullName>
    <label>Rent Charged Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>