force-app/main/default/objects/Pipeline__c/fields/Rental_Restrictions_List__c.field-meta.xml
<CustomField>
    <fullName>Rental_Restrictions_List__c</fullName>
    <formula>HOA_Company__r.Rental_Restrictions_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Restrictions List</label>
    <type>Text</type>
</CustomField>