force-app/main/default/objects/Pipeline__c/fields/Security_Deposit_Released__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Released__c</fullName>
    <label>Security Deposit Released</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>