force-app/main/default/objects/Pipeline__c/fields/Sum_of_Properties_cost__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Properties_cost__c</fullName>
    <formula>Accepted_Contract_Price__c  +  Initial_Inspection_Budget_Amount__c  +  Acq_Costs_Paid_at_Closing__c</formula>
    <label>Sum of Properties cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>