force-app/main/default/objects/Pipeline__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Supervisor&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Supervisor/Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline1</relationshipName>
    <type>Lookup</type>
</CustomField>