force-app/main/default/objects/Pipeline__c/fields/Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents a test record.</description>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>