force-app/main/default/objects/Pipeline__c/fields/TIP_Notes__c.field-meta.xml
<CustomField>
    <fullName>TIP_Notes__c</fullName>
    <label>TIP Notes</label>
    <type>TextArea</type>
</CustomField>