force-app/main/default/objects/Pipeline__c/fields/Title_Company_Text__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Text__c</fullName>
    <description>Gives the Title company name</description>
    <inlineHelpText>The transaction coordinator can input the text if the title company is not populated</inlineHelpText>
    <label>Title Company Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>