force-app/main/default/objects/Pipeline__c/fields/Title_Contact1__c.field-meta.xml
<CustomField>
    <fullName>Title_Contact1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>