force-app/main/default/objects/Pipeline__c/fields/Title_Contact__c.field-meta.xml
<CustomField>
    <fullName>Title_Contact__c</fullName>
    <label>Title Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>