force-app/main/default/objects/Pipeline__c/fields/Title_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Title_Contact_Email__c</fullName>
    <label>Title Contact Email</label>
    <type>Email</type>
</CustomField>