force-app/main/default/objects/Pipeline__c/fields/Title_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Title_Contact_Phone__c</fullName>
    <label>Title Contact Phone</label>
    <type>Phone</type>
</CustomField>