force-app/main/default/objects/Pipeline__c/fields/Title_Policy_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Title_Policy_Paid_By__c</fullName>
    <label>Title Policy Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>