force-app/main/default/objects/Pipeline__c/fields/Transaction_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Transaction Coordinator&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Transaction Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline3</relationshipName>
    <type>Lookup</type>
</CustomField>