force-app/main/default/objects/Pipeline__c/fields/Transaction_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Coordinator_Name__c</fullName>
    <description>Transaction coordinator name, not on the page layout. Created for Yardi dump</description>
    <formula>Transaction_Coordinator__r.FirstName+&quot; &quot;+Transaction_Coordinator__r.LastName</formula>
    <label>Transaction Coordinator Name</label>
    <type>Text</type>
</CustomField>