force-app/main/default/objects/Pipeline__c/fields/Treasury_Contact__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipelines1</relationshipName>
    <type>Lookup</type>
</CustomField>