force-app/main/default/objects/Pipeline__c/fields/Violations__c.field-meta.xml
<CustomField>
    <fullName>Violations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Violations</label>
    <type>Checkbox</type>
</CustomField>