force-app/main/default/objects/Pipeline__c/fields/Violations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Violations_Comments__c</fullName>
    <label>Violations Comments</label>
    <type>TextArea</type>
</CustomField>