force-app/main/default/objects/Pipeline__c/fields/Wire_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Wire_Reference_No__c</fullName>
    <description>Gives the Wire reference number</description>
    <label>Wire Reference No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>