force-app/main/default/objects/Pipeline__c/fields/Wire_Reference_No_COE__c.field-meta.xml
<CustomField>
    <fullName>Wire_Reference_No_COE__c</fullName>
    <inlineHelpText>COE wire reference number</inlineHelpText>
    <label>Wire Reference No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>