force-app/main/default/objects/Pipeline__c/fields/Wiring_Information_Forwarded__c.field-meta.xml
<CustomField>
    <fullName>Wiring_Information_Forwarded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Transaction Coordinator would check this checkbox once the &quot;EMD Payment Type&quot; and &quot;Beneficiary reference number&quot; fields are filled in and this would send out an email notification to the Treasury team that an EMD request needs to be processed.</inlineHelpText>
    <label>Wiring Information Forwarded</label>
    <type>Checkbox</type>
</CustomField>