force-app/main/default/objects/Pipeline__c/fields/Wiring_Instructions_COE__c.field-meta.xml
<CustomField>
    <fullName>Wiring_Instructions_COE__c</fullName>
    <label>Wiring Instructions - COE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>