force-app/main/default/objects/Pipeline__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <formula>Prospect_Record__r.Year_Built__c</formula>
    <label>Year Built</label>
    <type>Text</type>
</CustomField>