force-app/main/default/objects/Pipeline__c/recordTypes/Pipeline_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Pipeline_Read_Only</fullName>
    <active>true</active>
    <description>Pipeline Record Type with Read Only access</description>
    <label>Pipeline - Read Only</label>
</RecordType>