force-app/main/default/objects/Pipeline__c/recordTypes/Pipeline_Read_Write.recordType-meta.xml
<RecordType>
    <fullName>Pipeline_Read_Write</fullName>
    <active>true</active>
    <description>Pipeline Record Type with Read/Write access</description>
    <label>Pipeline - Read/Write</label>
</RecordType>